--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
 
     <footer>
       <p>&copy; 2023 Jogo do 24. Todos os direitos reservados.</p>
+      <a
+        href="https://github.com/danyacassam/jogo-do-24"
+        target="_blank"
+        class="textLink"
+        id="textLink"
+      >
+        Open-source code on GitHub,</a
+      >
+      by Danya Cassam
     </footer>
 
     <script src="src/script.js"></script>
